--- a/compose.yaml
+++ b/compose.yaml
@@ -22,8 +22,22 @@ services:
       - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
       - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
   
+  database:
+    container_name: postgres
+    image: postgres
+    restart: always
+    volumes:
+      - market_data:/var/lib/postgresql/data
+    networks:
+      - data-layer
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}    
 networks:
   data-layer:
   external:
   logic:
 
+volumes:
+  market_data:
