--- a/compose.yaml
+++ b/compose.yaml
@@ -33,7 +33,24 @@ services:
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}    
+      - POSTGRES_DB=${POSTGRES_DB}
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: always
+    networks:
+      - data-layer
+    ports:
+      - 5050:80
+    depends_on:
+      - database
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
+
 networks:
   data-layer:
   external:
@@ -41,3 +58,4 @@ networks:
 
 volumes:
   market_data:
+  pgadmin_data:
